# stl2thumbnail_rs

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: arch_pkg.yml  archlinux_makepkg.yml  makepkg.yml  shell.yml  tests.yml  win32.yml
desktop_integration/linux/gnome/: 3mf.thumbnailer  CMakeLists.txt  gcode.thumbnailer  stl.thumbnailer
desktop_integration/linux/kde/: CMakeLists.txt  stl-thumbnailer.desktop  thumbcreator.cpp  thumbcreator.h
desktop_integration/win32/: Cargo.toml
desktop_integration/win32/src/: generator.rs  generator_impl.rs  lib.rs
stl2thumbnail_rs/: .gitignore  Cargo.toml  build.rs
stl2thumbnail_rs/include/: stl2thumbnail.h
stl2thumbnail_rs/src/: aabb.rs  encoder.rs  ffi.rs  gcode.rs  lib.rs  main.rs  mesh.rs  parser.rs  picture.rs  rasterbackend.rs  threemf.rs
stl2thumbnail_rs/src/stl/: aabb.rs  encoder.rs  mesh.rs  mod.rs  parser.rs  rasterbackend.rs
stl2thumbnail_rs/src/test_models/: test_cube.bgcode  test_cube.gcode
stl2thumbnail_rs/test_models/: bambu_test.3mf  prusa_test.3mf  test_cube.3mf
