[package]
name = "stl2thumbnail"
version = "1.1.0"
authors = ["Paul <krepa098@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "stl2thumbnail"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
glm = { package = "nalgebra-glm", version = "0.18.0" }
scan_fmt = "0.2.6"
anyhow = "1.0.79"
byteorder = "1.5.0"
base64 = "0.21.7"
image = { version = "0.24.8", default-features = false, features = [
    "gif",
    "png",
    "jpeg",
] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
flate2 = "1.0.28"

[build-dependencies]
cbindgen = "0.26.0"

#[profile.release]
#debug = true

#[profile.release]
#panic = "abort"
