[package]
name = "stl2thumbnail"
version = "1.1.0"
authors = ["Paul <krepa098@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "stl2thumbnail"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["cargo"] }
glm = { package = "nalgebra-glm", version = "0.19.0" }
scan_fmt = "0.2.6"
anyhow = "1.0.97"
byteorder = "1.5.0"
base64 = "0.22.1"
image = { version = "0.25.5", default-features = false, features = [
    "gif",
    "png",
    "jpeg",
] }
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }
flate2 = "1.1.0"

[build-dependencies]
cbindgen = "0.28.0"

#[profile.release]
#debug = true

#[profile.release]
#panic = "abort"
