[package]
name = "stl2thumbnail-win32"
version = "0.1.0"
authors = ["Paul"]
edition = "2021"

[lib]
name = "stl2thumbnail_win32"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stl2thumbnail = { path = "../../stl2thumbnail_rs" }
com = { version = "0.4", features = ["production"] }
winapi = { version = "0.3", features = [
    "objidlbase",
    "winnt",
    "wtypes",
    "wingdi",
] }
